@@ -2,7 +2,8 @@
 v4.2.27
 -------
 
-
+[mjr] Remove erroneously added patch file.
+|+
 
 
 -------
